--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "@inertiajs/core": "^1.0.7",
     "@inertiajs/react": "^1.0.7",
     "@inertiajs/server": "^0.1.0",
+    "@react-pdf/renderer": "^3.1.12",
     "classnames": "^2.3.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "vite-plugin-live-reload": "^3.0.2",
     "ziggy-js": "^1.6.0"
   },
   "prettier": {
