--- a/package.json
+++ b/package.json
@@ -8,26 +8,41 @@
   "devDependencies": {
     "@prettier/plugin-php": "^0.18.9",
     "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/typography": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/lodash": "^4.14.195",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.4",
     "@types/ziggy-js": "^1.3.2",
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
+    "@typescript-eslint/parser": "^6.6.0",
     "@vitejs/plugin-react": "^2.2.0",
     "@vue/server-renderer": "^3.2.31",
     "autoprefixer": "^10.4.14",
     "axios": "^0.26.1",
+    "eslint": "^8.48.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-standard-with-typescript": "^39.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^16.0.2",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.2",
     "laravel-vite-plugin": "^0.7.8",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
+    "sass": "^1.66.1",
     "tailwindcss": "^3.3.2",
     "tsdef": "0.0.14",
-    "typescript": "^5.1.6",
+    "typescript": "^5.2.2",
     "vite": "^3.2.7"
   },
   "dependencies": {
     "@aperturerobotics/chonky": "^0.2.6",
     "@aperturerobotics/chonky-icon-fontawesome": "^0.2.2",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.14",
     "@inertiajs/core": "^1.0.7",
     "@inertiajs/react": "^1.0.7",
@@ -37,6 +52,7 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.4.5",
     "vite-plugin-live-reload": "^3.0.2",
     "ziggy-js": "^1.6.0"
   },
